* Fixed minor layout issue with query answer view when editing existing comment * Fixed query asnwer view's comments links position when replying without resfreshing the view

--- a/edelphi/src/main/webapp/_themes/default/css/forms.css
+++ b/edelphi/src/main/webapp/_themes/default/css/forms.css
@@ -245,7 +245,7 @@ textarea.queryComment:focus {
   border-radius: 2px;
   padding: 4px 6px;
   border: 3px solid #e5e5e5;  
-  margin-top:10px; 
+  margin-top:0px; 
 }
 
 #panelAdminSendEmailContentBlockContent textarea {
